# driving_log_replayer

./: .driving_log_replayer.cspell.json  .gitignore  .pre-commit-config.yaml  .prettierignore  404.html  CONTRIBUTING.md  README.md  REFACTOR.md  ReleaseNotes.md  dependency.repos  github_action_dependency.repos  index.html  mkdocs.yml  pyproject.toml  requirements.txt  setup.cfg  sitemap.xml  sonar-project.properties
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: colcon-test.yaml  colcon_test.yml  (+6 more)
analyzer/: index.html
docs/: .gitignore  .pages  common_attribute.adoc  index.en.md  index.ja.md  index.md  introduction.adoc  main.adoc  make_html.sh  scenario_format.adoc  system.adoc  use_case_localization.adoc
driving_log_replayer/: CHANGELOG.rst  CMakeLists.txt  package.xml
driving_log_replayer/config/: autoware.rviz  dlr.rviz  ground_segmentation.qos.yaml  ground_segmentation.rviz  localization.rviz  localization_topics.yaml  object_output_schema.json  obstacle_segmentation.qos.yaml  obstacle_segmentation.rviz  perception.rviz  performance_diag.qos.yaml  planning_control.qos.yaml
driving_log_replayer/config/localizaiton/: qos.yaml
driving_log_replayer/config/localization/: topic_state_monitor.yaml
driving_log_replayer/config/obstacle_segmentation/: qos.yaml
driving_log_replayer/driving_log_replayer/: __init__.py  annotation_lees_perception.py  annotationless_perception.py  ar_tag_based_localizer.py  eagleye.py  evaluator.py  ground_segmentation.py  lanelet2_util.py  launch_common.py  launch_config.py  localization.py  node_common.py  obstacle_segmentation.py  obstacle_segmentation_analyzer.py  perception.py  perception_2d.py  perception_eval_conversions.py  performance_diag.py  planning_control.py  result.py  scenario.py  shutdown_once.py  traffic_light.py  yabloc.py
driving_log_replayer/driving_log_replayer/criteria/: __init__.py  perception.py
driving_log_replayer/include/driving_log_replayer/: ground_segmentation_evaluator_component.hpp  obstacle_segmentation_evaluator_component.hpp  visibility_control.hpp
driving_log_replayer/launch/: annotation_less_perception.launch.py  annotationless_perception.launch.py  ar_tag_based_localizer.launch.py  dlr.launch.py  eagleye.launch.py  ground_segmentation.launch.py  localization.launch.py  obstacle_segmentation.launch.py  obstacle_segmentation_analyze.launch.py  perception.launch.py  perception_2d.launch.py  performance_diag.launch.py  planning_control.launch.py  traffic_light.launch.py  yabloc.launch.py
driving_log_replayer/scripts/: annotation_less_perception_evaluator_node.py  annotationless_perception_evaluator_node.py  ar_tag_based_localizer_evaluator_node.py  bag_play_controller_node.py  eagleye_evaluator_node.py  ground_segmentation_evaluator_node.py  localization_evaluator_node.py  obstacle_segmentation_analyzer.py  obstacle_segmentation_evaluator_node.py  obstacle_segmentation_load_scene_result.py  perception_2d_evaluator_node.py  perception_database_result.py  perception_database_result_node.py  perception_evaluator_node.py  perception_load_database_result.py  perception_starter.py  perception_tracking_scenario_evaluator_node.py  performance_diag_evaluator_node.py  planning_control_evaluator_node.py  traffic_light_evaluator_node.py  yabloc_evaluator_node.py
driving_log_replayer/scripts/analyzer/: obstacle_segmentation_analyzer.py
driving_log_replayer/scripts/debug/: calc_transform_node.py  obstacle_segmentation_load_scene_result.py  perception_load_scene_result.py
driving_log_replayer/src/: ground_segmentation_evaluator_component.cpp  obstacle_segmentation_evaluator_component.cpp
driving_log_replayer/test/: test_sample.py
driving_log_replayer/test/launch/: test_localization_node.py
driving_log_replayer/test/unittest/: sample  test_annotation_less_perception.py  test_annotationless_perception.py  test_ar_tag_based_localizer.py  test_eagleye.py  test_evaluator.py  test_lanelet2.py  test_launch_common.py  test_localization.py  test_obstacle_segmentation.py  test_perception.py  test_perception_2d.py  test_perception_eval_conversions.py  test_performance_diag.py  test_planning_control.py  test_result.py  test_scenario.py  test_traffic_light.py  test_yabloc.py
driving_log_replayer/test/unittest/criteria/: test_perception.py
driving_log_replayer_analyzer/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
driving_log_replayer_analyzer/config/: config.yaml
driving_log_replayer_analyzer/driving_log_replayer_analyzer/: __init__.py  __main__.py  calc.py  config.py  jsonl_parser.py  main.py
driving_log_replayer_analyzer/driving_log_replayer_analyzer/analysis/: __init__.py  obstacle_segmentation.py
driving_log_replayer_analyzer/driving_log_replayer_analyzer/config/: __init__.py  obstacle_segmentation.py  obstacle_segmentation.yaml
driving_log_replayer_analyzer/driving_log_replayer_analyzer/data/: __init__.py  calc.py  common.py  detection.py  jsonl_parser.py  non_detection.py  obstacle_segmentation.py  position.py  summary.py
driving_log_replayer_analyzer/driving_log_replayer_analyzer/plot/: __init__.py  bird_view_plot.py  line_plot.py  plot_base.py  scatter_plot.py
driving_log_replayer_cli/: __init__.py
driving_log_replayer_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
driving_log_replayer_msgs/msg/: BoolStamped.msg  DetectionResult.msg  DetectionResultArray.msg  GroundSegmentationEvalResult.msg  NonDetectionResult.msg  ObstacleSegmentationInput.msg  ProcessTime.msg  ResultStatus.msg  ResultStatusStamped.msg
en/: .pages  index.html
ja/: index.html
log_evaluator/: CMakeLists.txt  package.xml
log_evaluator_analyzer/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
log_evaluator_migration_tool/: README.md  log_evaluator_migration_tool.py
log_evaluator_msgs/: CMakeLists.txt  package.xml
overview/: index.html
result_format/: index.html
sample/: .driving_log_replayer.config.toml
scenario_format/: index.html
scenario_migrator/: README.md  scenario_migrator.py
search/: search_index.json
trouble_shooting/: index.html
use_case/: index.html
(+308 files in other folders)
