[tool.poetry]
name = "driving_log_replayer_cli"
version = "1.5.0"
description = "command line tool for driving_log_replayer"
authors = [
  "Hayato Mizushima <hayato.mizushima@tier4.jp>",
  "Keisuke Shima <keisuke.shima@tier4.jp>",
  "Koji Minoda <koji.minoda@tier4.jp>",
]
readme = "README.md"
license = "Apache-2.0"
packages = [
  { include = "driving_log_replayer_cli"},
  { include = "driving_log_replayer_analyzer", from="driving_log_replayer_analyzer"},
]
include = [
  "driving_log_replayer_cli",
  "driving_log_replayer_analyzer",
]

[tool.poetry.scripts]
driving_log_replayer = "driving_log_replayer_cli:main"
driving_log_replayer_analyzer = "driving_log_replayer_analyzer:main"

[tool.poetry.dependencies]
python = "^3.8.1"
termcolor = "^2.3.0"
natsort = "^8.4.0"
PyYAML = "^6.0.1"
toml = "^0.10.2"
click = "^8.1.6"
pandas = "^2.0.3"
plotly = "^5.16.0"
kaleido = "0.2.1"
simplejson = "^3.19.1"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
flake8 = "^6.1.0"
pep8-naming = "^0.13.3"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line_length = 100

[tool.ruff]
line-length = 100
show-source = true
# https://beta.ruff.rs/docs/rules/
select = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ARG", "BLE", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]
ignore = ["D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107", "D203", "D212", "D404", "E203", "E501", "Q000", "S108", "FBT001", "S602"]
fixable=["D", "EXE", "I"]

[tool.ruff.isort]
# https://pycqa.github.io/isort/docs/configuration/options.html#default-section
force-sort-within-sections = true
known-third-party = ["launch", "yaml"]
force-single-line = true
# https://beta.ruff.rs/docs/settings/#isort-relative-imports-order
relative-imports-order = "closest-to-furthest"
order-by-type = false
