<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>driving_log_replayer_analyzer</name>
  <version>2.0.11</version>
  <description>The driving_log_replayer_analyzer package</description>
  <maintainer email="hayato.mizushima@tier4.jp">Hayato Mizushima</maintainer>
  <maintainer email="keisuke.shima@tier4.jp">Keisuke Shima</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <build_depend>autoware_cmake</build_depend>

  <exec_depend>python3-pandas</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>rclpy</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>autoware_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
